fix task wrap and cursor:pointer

--- a/src/components/screens/Navbar/Navbar.css
+++ b/src/components/screens/Navbar/Navbar.css
@@ -30,6 +30,7 @@ body {
 }
 
 .navbar a {
+    cursor: pointer;
     color: #000000;
     text-decoration: none;
     font-size: 1.2em;
