--- a/src/components/screens/Task/StructureTask.css
+++ b/src/components/screens/Task/StructureTask.css
@@ -10,10 +10,17 @@
 }
 
 .header {
+    cursor: pointer;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+.loadTask {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .containerTask {
