--- a/src/components/screens/Task/Task.css
+++ b/src/components/screens/Task/Task.css
@@ -108,6 +108,7 @@ h1 {
 }
 
 .footer {
+    cursor: pointer;
     color: #000000;
     text-decoration: none;
     padding: 10px;
